# ccg_app_cpp_OmniverseSampler

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  Usage.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BBDChorus.h  BBDDelay.h  LFO.h  SVFilter.h  SpectralFilter.h  TapeSaturation.h
Source/Sampler/: OmniverseSampler.cpp  OmniverseSampler.h  OmniverseVoice.cpp  OmniverseVoice.h  SampleSlot.cpp  SampleSlot.h
Source/UI/: EffectsPanel.cpp  EffectsPanel.h  FiltersPanel.cpp  FiltersPanel.h  OmniverseLookAndFeel.cpp  OmniverseLookAndFeel.h  SlotPanel.cpp  SlotPanel.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Utils/: Parameters.cpp  Parameters.h
__docs/: 01. Initial plan and build.txt
specs/: SPECIFICATION.md
